@@ -1,0 +1,10 @@
+NAME=snfs_small
+
+clean : ;
+	rm -f cols* deps* factor.easy lpindex* rels* numFF.txt numrels.txt tmp.job *.afb.0
+	rm -f $(NAME).job $(NAME).polsel* $(NAME).fb spairs.*
+	rm -f spmat sp-index .params .last_spq* depinf tmpdata.000
+
+squeaky : clean ;
+	rm -f relations.jpg xprimes.jpg
+
