@@ -2,6 +2,7 @@
   * Added LOCALINC to include paths in Makefiles for src/lasieve4/piii,
     src/lasieve4/ppc32, and src/pol5.  Anyone able to try if the itanium
     or mips lattice siever code works? :)
+  * Added Makefile to tests/snfs_small
 
 8/24/05 (relf)
   * lasieve-asm.h renamed to siever-config.h
